# coder_agent

./: README.md  pyproject.toml
output/: code_and_output.txt
src/coder/: crew.py  main.py
src/coder/config/: agents.yaml
