[project]
name = "coder"
version = "0.1.0"
description = "coder using crewAI"
authors = [{ name = "Lucas Abner", email = "lucascaixeta02@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
coder = "coder.main:run"
run_crew = "coder.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

